:sparkles: Test unitários prontos